rename productInfo image container to prevent .css:hover problems on mobile

--- a/frontend/src/pages/productInfo/productInfo.css
+++ b/frontend/src/pages/productInfo/productInfo.css
@@ -23,6 +23,12 @@
   margin-bottom: 10px;
 }
 
+.productInfo-image-container:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity 0.1s ease-in-out;
+}
+
 .productInfo img {
   width: 300px;
   border-radius: 7px;
